--- a/index.html
+++ b/index.html
@@ -3,65 +3,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>811 Day of Service</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to right, #f2f2f2, #d6eaf8);
-      color: #333;
-      text-align: center;
-    }
-    header {
-      background-color: #00457c;
-      color: white;
-      padding: 2rem 1rem;
-    }
-    header img {
-      max-height: 60px;
-      margin: 0 1rem;
-    }
-    main {
-      padding: 2rem;
-    }
-    h1 {
-      color: #00457c;
-      margin-bottom: 1rem;
-    }
-    p {
-      font-size: 1.2rem;
-      margin-bottom: 2rem;
-    }
-    .cta {
-      background-color: #f39c12;
-      color: white;
-      padding: 1rem 2rem;
-      text-decoration: none;
-      border-radius: 5px;
-      font-weight: bold;
-    }
-    footer {
-      margin-top: 2rem;
-      padding: 1rem;
-      background-color: #00457c;
-      color: white;
-    }
-  </style>
+  <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <img src="logo_811.png" alt="811 Logo" />
-    <img src="brooksource_logo.png" alt="Brooksource Logo" />
-    <h1>811 Day of Service</h1>
-  </header>
-  <main>
-    <h2>Promoting Safe Digging Practices Nationwide</h2>
-    <p>Join us on August 11th to volunteer, learn, and spread awareness about underground utility safety. Let's dig safely and make a difference together.</p>
-    <a class="cta" href="#">Register Now</a>
-  </main>
-  <footer>
-    &copy; 2025 811 Day of Service. All rights reserved.
-  </footer>
+  <div class="container">
+    <header>
+      <img src="EE_black_HEX_horizontal-01.png" alt="Eight Eleven Group Logo" class="logo">
+      <img src="BRK_2c_HEX_horizontal-01 (1).png" alt="Brooksource Logo" class="logo">
+    </header>
+    <main>
+      <h1>811 Day of Service</h1>
+      <p>Join us in giving back to the community on this special day of volunteering and service. Let's make a difference together!</p>
+      <a href="#" class="cta-button">Get Involved</a>
+    </main>
+    <footer>
+      <p>&copy; 2025 Eight Eleven Group & Brooksource</p>
+    </footer>
+  </div>
 </body>
 </html>
