--- a/index.html
+++ b/index.html
@@ -1,26 +1,43 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>811 Day of Service</title>
-  <link href="styles.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>811 Day of Service Golf Outing</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
-    <header>
-      <img src="EE_black_HEX_horizontal-01.png" alt="Eight Eleven Group Logo" class="logo">
-      <img src="BRK_2c_HEX_horizontal-01 (1).png" alt="Brooksource Logo" class="logo">
+    <header class="hero">
+        <div class="container">
+            <div class="logos">
+                <img src="assets/brooksource-logo.png" alt="Brooksource Logo" class="logo">
+                <img src="assets/eight-eleven-logo.png" alt="Eight Eleven Logo" class="logo">
+            </div>
+            <h1>811 Day of Service Golf Outing</h1>
+            <p>Join us for a fun day on the green supporting Journey House!</p>
+            <a href="#register" class="btn">Register Now</a>
+        </div>
     </header>
-    <main>
-      <h1>811 Day of Service</h1>
-      <p>Join us in giving back to the community on this special day of volunteering and service. Let's make a difference together!</p>
-      <a href="#" class="cta-button">Get Involved</a>
+    <main class="details">
+        <div class="container">
+            <h2>Event Details</h2>
+            <div class="event-info">
+                <p><strong>Location:</strong> Western Lakes Golf Club, Pewaukee</p>
+                <p><strong>Date:</strong> August 11, 2025</p>
+                <p><strong>Schedule:</strong> 7:15 AM Registration | 8:00 AM Shotgun Start</p>
+            </div>
+            <h2>About the Cause</h2>
+            <p>We’re proud to partner with <strong>Journey House</strong>, a Milwaukee-based organization empowering families through education, youth development, and community engagement. All proceeds from this event will support their mission.</p>
+            <h2>Silent Auction</h2>
+            <p>Don’t miss our <strong>silent auction</strong> featuring exclusive items and experiences! Bid during the event to help raise funds for Journey House.</p>
+            <a href="#register" class="btn secondary">Get Involved</a>
+        </div>
     </main>
     <footer>
-      <p>&copy; 2025 Eight Eleven Group & Brooksource</p>
+        <div class="container">
+            <p>© 2025 811 Day of Service | Powered by Brooksource & Eight Eleven</p>
+        </div>
     </footer>
-  </div>
 </body>
 </html>
